# cryptopals

./: .svnignore  Makefile  Makefile.am  README  autogen  configure.ac  conversions.h  crypto1.sh
include/: chardistn.h  string.h
include/bs/: bs.h
lib/: bs.c  chardistn.c  compile.sh  string.c  string_base64.c  string_hex.c  string_xor.c  text.h
src/: Makefile.am  char_distn.c  char_distn.h  crypto1.c  crypto2.c  crypto3.c  crypto5.c  crypto7.c  text.c  training.txt
src/lib/: Makefile.am  conversions.c
tests/: Makefile.am  conversions_allocate_byte_stream.c  conversions_byte_stream.c
tests/conversions/: Makefile.am  base64_stream.c  byte_stream.c  conversions.c  conversions.h  hex_byte.c  hex_stream.c  string_stream.c  xor_stream.c
