## Process this file with automake to produce Makefile.in

TESTS = conversions_allocate_byte_stream.c
check_PROGRAMS = conversions_allocate_byte_stream
conversions_allocate_byte_stream_SOURCES = conversions_allocate_byte_stream.c $(top_builddir)/src/conversions.h
conversions_allocate_byte_stream_CFLAGS = @CHECK_CFLAGS@
conversions_allocate_byte_stream_LDADD = $(top_builddir)/src/libconversions.la @CHECK_LIBS@
